2000-06-03  Larry Jones  <larry.jones@sdrc.com>

	* commit.c (checkaddfile): Plug memory leak.
	* rcs.c (RCS_checkin): Plug memory leaks.
	* server.c (do_cvs_command): Plug file descriptor leaks.
	* tag.c (check_fileproc): Plug memory leak.

2000-05-26  Larry Jones  <larry.jones@sdrc.com>

	* recurse.c (unroll_files_proc): Plug memory leak.

	* recurse.c (addfile): Fix nonportable pointer cast.

	* rcs.c (rcsbuf_getstring, rcsbuf_getword, getdelta): Plug memory
	leaks.

2000-05-25  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout, build_one_dir, checkout_proc): Move m_type
	to file scope and use it instead of continually doing strcmp on
	command_name.
	(build_one_dir, checkout_proc): Don't allow export if CVSADM
	directory already exists.

2000-05-23  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_checkin, RCS_cmp_file): Plug memory leaks.  (Patch
	submitted by Chris G. Demetriou <cgd@sibyte.com>.)

2000-05-20  Ian Lance Taylor  <ian@zembu.com>

	* client.c (connect_to_gserver): Handle server error messages
	reasonably.

2000-05-19  Larry Jones  <larry.jones@sdrc.com>

	* server.c (requests): Make Global_option RQ_ROOTLESS so it can be
	used with init.

2000-05-18  Larry Jones  <larry.jones@sdrc.com>

	* client.c (start_server): Don't do encryption, authentication,
	compression, or case insensitivity when doing init because init
	is ROOTLESS and they're not.

	* client.c (connect_to_pserver): Include repository and username in
	authorization failed message -- if a directory tree crosses multiple
	repositories, it can be quite difficult for the user to figure out
	which one is the problem.

2000-05-17  Larry Jones  <larry.jones@sdrc.com>

	* main.c (main): Use full set of options when looking for -f to
	avoid misparsing options that take values (previously, -sVAR=foo
	was incorrectly parsed as though it were -s -V -A -R -= -f -o -o
	because it didn't know that -s takes a value).
	* sanity.sh (info-6b): New test for above.
